force-app/main/default/objects/KDCE_Store__c/fields/AddressLv1__c.field-meta.xml
<CustomField>
    <fullName>AddressLv1__c</fullName>
    <description>[KDCE] Address Lv1</description>
    <label>Address Lv1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>