force-app/main/default/objects/KDCE_Store__c/fields/AddressLv2__c.field-meta.xml
<CustomField>
    <fullName>AddressLv2__c</fullName>
    <description>[KDCE] Address Lv2</description>
    <label>Address Lv2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>