force-app/main/default/objects/KDCE_Store__c/fields/AddressLv3__c.field-meta.xml
<CustomField>
    <fullName>AddressLv3__c</fullName>
    <description>[KDCE] Address Lv3</description>
    <label>Address Lv3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>