force-app/main/default/objects/KDCE_Store__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <description>[KDCE] Address Type</description>
    <label>Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>