force-app/main/default/objects/KDCE_Store__c/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <description>[KDCE] Agent Id</description>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>