force-app/main/default/objects/KDCE_Store__c/fields/AsStorageLocation__c.field-meta.xml
<CustomField>
    <fullName>AsStorageLocation__c</fullName>
    <label>AS Storage location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>