force-app/main/default/objects/KDCE_Store__c/fields/BasicTaxRate__c.field-meta.xml
<CustomField>
    <fullName>BasicTaxRate__c</fullName>
    <description>[KDCE] Basic Tax Rate</description>
    <label>Basic Tax Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>