force-app/main/default/objects/KDCE_Store__c/fields/BizCondition__c.field-meta.xml
<CustomField>
    <fullName>BizCondition__c</fullName>
    <description>[KDCE] Business Conditions</description>
    <label>Biz Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>