force-app/main/default/objects/KDCE_Store__c/fields/BizLOCCode__c.field-meta.xml
<CustomField>
    <fullName>BizLOCCode__c</fullName>
    <description>[KDCE] Business Location Code</description>
    <externalId>true</externalId>
    <label>Biz Location Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>