force-app/main/default/objects/KDCE_Store__c/fields/BizLOCENGName__c.field-meta.xml
<CustomField>
    <fullName>BizLOCENGName__c</fullName>
    <description>[KDCE] Business Location ENG Name</description>
    <label>Biz Location ENG Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>