force-app/main/default/objects/KDCE_Store__c/fields/BizLOCStateType__c.field-meta.xml
<CustomField>
    <fullName>BizLOCStateType__c</fullName>
    <description>[KDCE] Business Location State Type</description>
    <label>Biz Location State Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>