force-app/main/default/objects/KDCE_Store__c/fields/BizLOCType__c.field-meta.xml
<CustomField>
    <fullName>BizLOCType__c</fullName>
    <description>[KDCE] Business Location Type</description>
    <label>Biz Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>