force-app/main/default/objects/KDCE_Store__c/fields/BizNum__c.field-meta.xml
<CustomField>
    <fullName>BizNum__c</fullName>
    <description>[KDCE] Business Number</description>
    <label>Biz Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>