force-app/main/default/objects/KDCE_Store__c/fields/CampaignCode__c.field-meta.xml
<CustomField>
    <fullName>CampaignCode__c</fullName>
    <description>[KDCE] GetInfo utmCampaignCode</description>
    <label>Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>