force-app/main/default/objects/KDCE_Store__c/fields/CardPayType__c.field-meta.xml
<CustomField>
    <fullName>CardPayType__c</fullName>
    <description>[KDCE] Payment Type(Card)</description>
    <label>Payment Type(Card)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>