force-app/main/default/objects/KDCE_Store__c/fields/CashPayType__c.field-meta.xml
<CustomField>
    <fullName>CashPayType__c</fullName>
    <description>[KDCE] Payment Type(Cash)</description>
    <label>Payment Type(Cash)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>