force-app/main/default/objects/KDCE_Store__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>[KDCE] Close Date</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>