force-app/main/default/objects/KDCE_Store__c/fields/CloseTime__c.field-meta.xml
<CustomField>
    <fullName>CloseTime__c</fullName>
    <description>[KDCE] Close Time</description>
    <label>Close Time</label>
    <type>Time</type>
</CustomField>