force-app/main/default/objects/KDCE_Store__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <description>[KDCE] Company Code</description>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>