force-app/main/default/objects/KDCE_Store__c/fields/DeveloperId__c.field-meta.xml
<CustomField>
    <fullName>DeveloperId__c</fullName>
    <description>[KDCE] Developer ID</description>
    <label>Developer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>