force-app/main/default/objects/KDCE_Store__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>[KDCE] FAX</description>
    <label>FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>