force-app/main/default/objects/KDCE_Store__c/fields/FaxRegion__c.field-meta.xml
<CustomField>
    <fullName>FaxRegion__c</fullName>
    <description>[KDCE] FAX Region</description>
    <label>FAX Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>