force-app/main/default/objects/KDCE_Store__c/fields/IsAlcoSaleCheck__c.field-meta.xml
<CustomField>
    <fullName>IsAlcoSaleCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Check the sale of Alcohol</description>
    <label>Alco Sale Check YN</label>
    <type>Checkbox</type>
</CustomField>