force-app/main/default/objects/KDCE_Store__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Is it New ?</description>
    <label>New YN</label>
    <type>Checkbox</type>
</CustomField>