force-app/main/default/objects/KDCE_Store__c/fields/IsUse__c.field-meta.xml
<CustomField>
    <fullName>IsUse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Is it used?</description>
    <label>Use YN</label>
    <type>Checkbox</type>
</CustomField>