force-app/main/default/objects/KDCE_Store__c/fields/LNGType__c.field-meta.xml
<CustomField>
    <fullName>LNGType__c</fullName>
    <description>[KDCE] Language Type</description>
    <label>Language Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>