force-app/main/default/objects/KDCE_Store__c/fields/LocationType__c.field-meta.xml
<CustomField>
    <fullName>LocationType__c</fullName>
    <label>Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>