force-app/main/default/objects/KDCE_Store__c/fields/MenuButtonGroupCode__c.field-meta.xml
<CustomField>
    <fullName>MenuButtonGroupCode__c</fullName>
    <description>[KDCE] Menu Button Group Code</description>
    <label>Menu Button Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>