force-app/main/default/objects/KDCE_Store__c/fields/MSGroupCode__c.field-meta.xml
<CustomField>
    <fullName>MSGroupCode__c</fullName>
    <description>[KDCE] Membership Policy Group Code</description>
    <label>Membership Policy Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>