force-app/main/default/objects/KDCE_Store__c/fields/NationType__c.field-meta.xml
<CustomField>
    <fullName>NationType__c</fullName>
    <description>[KDCE] Nation Type</description>
    <label>Nation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>