force-app/main/default/objects/KDCE_Store__c/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <description>[KDCE] Open Date</description>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>