force-app/main/default/objects/KDCE_Store__c/fields/OpenTime__c.field-meta.xml
<CustomField>
    <fullName>OpenTime__c</fullName>
    <description>[KDCE] Open Time</description>
    <label>Open Time</label>
    <type>Time</type>
</CustomField>