force-app/main/default/objects/KDCE_Store__c/fields/OrgBizPlaceCode__c.field-meta.xml
<CustomField>
    <fullName>OrgBizPlaceCode__c</fullName>
    <description>[KDCE] Organization Business Place Code</description>
    <label>Organization Biz Place Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>