force-app/main/default/objects/KDCE_Store__c/fields/OrgCode__c.field-meta.xml
<CustomField>
    <fullName>OrgCode__c</fullName>
    <description>[KDCE] Organization Code</description>
    <label>Organization Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>