force-app/main/default/objects/KDCE_Store__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>[KDCE] Phone</description>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>