force-app/main/default/objects/KDCE_Store__c/fields/PhoneRegion__c.field-meta.xml
<CustomField>
    <fullName>PhoneRegion__c</fullName>
    <description>[KDCE] Phone Region</description>
    <label>Phone Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>