force-app/main/default/objects/KDCE_Store__c/fields/PlantCode__c.field-meta.xml
<CustomField>
    <fullName>PlantCode__c</fullName>
    <description>[KDCE] Plant Code</description>
    <label>Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>