force-app/main/default/objects/KDCE_Store__c/fields/POSGroupType__c.field-meta.xml
<CustomField>
    <fullName>POSGroupType__c</fullName>
    <description>[KDCE] POS Group Type</description>
    <label>POS Group Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>