force-app/main/default/objects/KDCE_Store__c/fields/POSQuantity__c.field-meta.xml
<CustomField>
    <fullName>POSQuantity__c</fullName>
    <description>[KDCE] POS Quantity</description>
    <label>POS Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>