force-app/main/default/objects/KDCE_Store__c/fields/QRURL__c.field-meta.xml
<CustomField>
    <fullName>QRURL__c</fullName>
    <description>[KDCE] QR URL</description>
    <label>QR URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>