force-app/main/default/objects/KDCE_Store__c/fields/ReciveIP__c.field-meta.xml
<CustomField>
    <fullName>ReciveIP__c</fullName>
    <description>[KDCE] Receive Headquarters IP</description>
    <label>Recive IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>