force-app/main/default/objects/KDCE_Store__c/fields/RegionCode__c.field-meta.xml
<CustomField>
    <fullName>RegionCode__c</fullName>
    <description>[KDCE] Region Code</description>
    <label>Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>