force-app/main/default/objects/KDCE_Store__c/fields/RentalContactId__c.field-meta.xml
<CustomField>
    <fullName>RentalContactId__c</fullName>
    <description>Rental Store일 경우, rental dummy contact id 값 저장</description>
    <label>Rental Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>