force-app/main/default/objects/KDCE_Store__c/fields/RouterIP__c.field-meta.xml
<CustomField>
    <fullName>RouterIP__c</fullName>
    <description>[KDCE] Router IP</description>
    <label>Router IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>