force-app/main/default/objects/KDCE_Store__c/fields/RouterPort__c.field-meta.xml
<CustomField>
    <fullName>RouterPort__c</fullName>
    <description>[KDCE] Router Port</description>
    <label>Router Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>