force-app/main/default/objects/KDCE_Store__c/fields/SalePriceType__c.field-meta.xml
<CustomField>
    <fullName>SalePriceType__c</fullName>
    <description>[KDCE] Selling price rating classification</description>
    <label>Sale Price Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>