force-app/main/default/objects/KDCE_Store__c/fields/SaleStopEndDate__c.field-meta.xml
<CustomField>
    <fullName>SaleStopEndDate__c</fullName>
    <description>[KDCE] Sale Stop End Date</description>
    <label>Sale Stop End Date</label>
    <type>Date</type>
</CustomField>