force-app/main/default/objects/KDCE_Store__c/fields/SaleStopReason__c.field-meta.xml
<CustomField>
    <fullName>SaleStopReason__c</fullName>
    <description>[KDCE] Sale Stop Reason</description>
    <label>Sale Stop Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>