force-app/main/default/objects/KDCE_Store__c/fields/SaleStopStartDate__c.field-meta.xml
<CustomField>
    <fullName>SaleStopStartDate__c</fullName>
    <description>[KDCE] Sale Stop Start Date</description>
    <label>Sale Stop Start Date</label>
    <type>Date</type>
</CustomField>