force-app/main/default/objects/KDCE_Store__c/fields/SAPCustomerCode__c.field-meta.xml
<CustomField>
    <fullName>SAPCustomerCode__c</fullName>
    <description>[KDCE] SAP Customer Code</description>
    <label>SAP Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>