force-app/main/default/objects/KDCE_Store__c/fields/SendIP__c.field-meta.xml
<CustomField>
    <fullName>SendIP__c</fullName>
    <description>[KDCE] Send to Headquarters IP</description>
    <label>Send IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>