force-app/main/default/objects/KDCE_Store__c/fields/ServiceTaxApplyType__c.field-meta.xml
<CustomField>
    <fullName>ServiceTaxApplyType__c</fullName>
    <description>[KDCE] Service Tax Apply Type</description>
    <label>Service Tax Apply Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>