force-app/main/default/objects/KDCE_Store__c/fields/StoreIP__c.field-meta.xml
<CustomField>
    <fullName>StoreIP__c</fullName>
    <description>[KDCE] Store IP</description>
    <label>Store IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>