force-app/main/default/objects/KDCE_Store__c/fields/StoreType__c.field-meta.xml
<CustomField>
    <fullName>StoreType__c</fullName>
    <description>[KDCE] Store Type</description>
    <label>Store Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>