force-app/main/default/objects/KDCE_Store__c/fields/SupervisorId__c.field-meta.xml
<CustomField>
    <fullName>SupervisorId__c</fullName>
    <description>[KDCE] Supervisor ID</description>
    <label>Supervisor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>