force-app/main/default/objects/KDCE_Store__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <description>[KDCE] Tax Code</description>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>