force-app/main/default/objects/KDCE_Store__c/fields/TaxRateType__c.field-meta.xml
<CustomField>
    <fullName>TaxRateType__c</fullName>
    <description>[KDCE] Tax Rate Type</description>
    <label>Tax Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>