force-app/main/default/objects/KDCE_Store__c/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <description>[KDCE] Tax Type</description>
    <label>Tax Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>