force-app/main/default/objects/KDCE_Store__c/fields/TradeAreaType__c.field-meta.xml
<CustomField>
    <fullName>TradeAreaType__c</fullName>
    <description>[KDCE] Trade Area Type</description>
    <label>Trade Area Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>