force-app/main/default/objects/KDCE_Store__c/recordTypes/Store_Direct.recordType-meta.xml
<RecordType>
    <fullName>Store_Direct</fullName>
    <active>true</active>
    <label>Direct Retailer</label>
</RecordType>