force-app/main/default/objects/KDCE_Store__c/recordTypes/Store_GetInfo.recordType-meta.xml
<RecordType>
    <fullName>Store_GetInfo</fullName>
    <active>true</active>
    <label>GetInfo</label>
</RecordType>