force-app/main/default/objects/KDCE_Store__c/recordTypes/Store_Indirect.recordType-meta.xml
<RecordType>
    <fullName>Store_Indirect</fullName>
    <active>true</active>
    <label>Indirect Retailer</label>
</RecordType>