force-app/main/default/objects/KDCE_Store__c/recordTypes/Store_Online.recordType-meta.xml
<RecordType>
    <fullName>Store_Online</fullName>
    <active>true</active>
    <label>Online</label>
</RecordType>