force-app/main/default/objects/KDCE_Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BizLOCCode__c</columns>
    <columns>BizLOCENGName__c</columns>
    <columns>CloseDate__c</columns>
    <columns>CompanyCode__c</columns>
    <columns>CompanyName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>